# document-intelligence-service

./: README.md  main.py  pyproject.toml
docs/: architecture-boundary-audit-v1.1.md  data-flow-contract-v1.md  execution-boundary-freeze-v1.md  layer1-perception-freeze.md  layer2-contract-boundary.md  layer2-operational-boundary-spec.md  mcdm-structured-document-schema-definition-v1.md  schema.py文档说明.md  step2-completion-check.md  step3-completion-check.md  项目整体描述1.md
src/dis/: __init__.py  contracts.py  pipeline.py  schema.py  stubs.py  validation.py
src/dis/layer1/: __init__.py  ingestion.py
src/dis/layer2/: __init__.py  contracts.py
