[project]
name = "document-intelligence-service"
version = "0.1.0"
description = "Document Recovery Service - Converts scanned PDFs into StructuredDocument (MCDM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.24.0",   # For pure perception extraction only (no structure understanding)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
